--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-permission-role": "^2.0.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0"
   },
